# cognitive-book-os

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DOCS.md  PROJECT_SYSTEM_REPORT.md  README.md  config.yaml  main.py  pyproject.toml  test-coverage-progress-v2.txt  test-coverage-progress.txt  test-coverage-ralph.sh  test_graph.py
.github/workflows/: ci.yml
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Chat.tsx  FileInspector.tsx  Header.tsx  IngestModal.tsx  Sidebar.tsx  Visualizer.tsx
frontend/src/types/: index.ts
scripts/: benchmark.py  check.sh  launch_gui.sh
src/cognitive_book_os/: __init__.py  __main__.py  agent.py  app.py  brain.py  claim_store.py  cli.py  config.py  enrichment.py  gardener.py  gardener_scheduler.py  graph.py  ingest.py  llm.py  models.py  orchestration.py  parser.py  pipeline.py  prompts.py  query.py  server.py  summary.py  verify.py  viz.py
src/cognitive_book_os/prompts/: extract.md  query.md  synthesize.md
tests/: conftest.py  test_agent.py  test_brain.py  test_claim_store.py  test_config.py  test_gardener_scheduler.py  test_llm.py  test_models.py  test_orchestration.py  test_parser.py  test_prompts.py  test_server.py
