[project]
name = "cognitive-book-os"
version = "0.1.0"
description = "A structured knowledge extraction system for documents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.75.0",
    "instructor>=1.13.0",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[project.scripts]
bookos = "cognitive_book_os.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cognitive_book_os"]
